[package]
name = "sound-exporter"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "^0.8.9"
circular-buffer = "^1.2.0"
clap = { version = "^4.6.1", features = ["derive"] }
cpal = "^0.17.3"
# prometheus-client = "^0.24.1"
# prometheus-client-derive-encode = "^0.5.0"
tokio = { version = "^1.52.1", features = ["macros", "rt-multi-thread"] }
